--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ ul {
   position: relative;
   display: flex;
   align-items: center;
-  background-color: #f2f2f2
+  background-color: #f2f2f2;
 }
 
 .header__title {
@@ -125,7 +125,6 @@ ul {
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
-  align-items: flex-start;
 }
 
 .two-columns__brief {
@@ -199,7 +198,7 @@ ul {
   margin: 0 auto;
   height: 890px;
   position: relative;
-  background-color: #f2f2f2
+  background-color: #f2f2f2;
 }
 
 .feynman__img {
@@ -342,7 +341,7 @@ ul {
 .footer__column_link {
   list-style-type: none;
   line-height: 30px;
-  font-size: 18pxs;
+  font-size: 18px;
 }
 
 .footer__column_link_item {
