--- a/styles/style.css
+++ b/styles/style.css
@@ -123,7 +123,7 @@ ul {
   display: flex;
   width: 80%;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin: 0 auto;
 }
 
