--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,4 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
+
 
 ul { 
   padding-inline-start: 0;
@@ -18,16 +15,18 @@ ul {
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
-.teable__text {
+.table__text {
   font-size: 18px;
   line-height: 1.2;
   margin-top: 20px;
+  margin-bottom: 0;
 }
 
 .table__heading {
   font-size: 24px;
   line-height: 1.15;
   font-weight: bold;
+  margin: 0;
 }
 
 .section-title {
@@ -35,6 +34,8 @@ ul {
   font-size: 60px;
   line-height: 1.15;
   font-weight: bold;
+  margin: 0;
+  
 }
 
 .section-subtitle {
@@ -42,6 +43,7 @@ ul {
   font-size: 24px;
   line-height: 34px;
   margin-top: 20px;
+  margin-bottom: 0;
 }
 
 /*=======Header========*/
@@ -58,6 +60,7 @@ ul {
 
 .header__title {
   font-size: 102px;
+  line-height: 96px;
   width: 730px;
   z-index: 2;
   padding-left: 64px;
@@ -123,7 +126,6 @@ ul {
   display: flex;
   width: 80%;
   justify-content: space-between;
-  align-items: flex-start;
   margin: 0 auto;
 }
 
@@ -132,6 +134,7 @@ ul {
   color: #2f80ed;
   font-size: 18px;
   line-height: 1.2;
+  font-weight: normal;
 }
 
 .two-columns__main-text {
@@ -188,7 +191,7 @@ ul {
   margin-top: 60px;
 }
 
-.teable__text_bottom {
+.table__text_bottom {
   margin-top: 20px;
 }
 
@@ -196,13 +199,13 @@ ul {
 
 .feynman {
   margin: 0 auto;
-  height: 890px;
+  min-height: 890px;
   position: relative;
   background-color: #f2f2f2;
 }
 
 .feynman__img {
-  background-image: url('/images/feynman.png');
+  background-image: url('../images/feynman.png');
   background-repeat: no-repeat;
   background-size: cover;
   width: 867px;
@@ -253,6 +256,7 @@ ul {
   overflow: hidden;
   position: relative;
   padding: 90px 0;
+  box-sizing: border-box;
 }
 
 .section-title_theme_dark {
@@ -269,13 +273,13 @@ ul {
   margin-top: 80px;
 }
 
-.teable__text_theme_dark {
+.table__text_theme_dark {
   color: white;
   margin-top: 20px;
 }
 
 .kaufman__triangle {
-  background-image: url('/images/kaufman-triangle.svg');
+  background-image: url('../images/kaufman-triangle.svg');
   background-size: cover;
   width: 877px;
   height: 877px;
@@ -294,8 +298,6 @@ ul {
 .footer {
   width: 100%;
   background-color: #1f1f1f;
-  padding-top: 60px;
-  padding-bottom: 40px;
 }
 
 .footer__columns {
@@ -304,33 +306,34 @@ ul {
   justify-content: space-between;
   margin: 0 auto;
   width: 90%;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  box-sizing: border-box
 }
 
-.footer__column__content_copyright {
+.footer__column_content_copyright {
   flex-basis: 711px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
 }
 
 .logo_place_footer {
-  background-image: url('/images/logo_place_footer.svg');
+  background-image: url('../images/logo_place_footer.svg');
   background-size: cover;
   width: 183px;
   height: 35px;
-  position: absolute;
-  top: 0;
-  left: 0;
+  
 }
 
 .footer__autor {
-  position: absolute;
-  left: 0;
-  bottom: 0;
   color: #f2f2f2;
   line-height: 25px;
   font-size: 18px;
 }
 
-.footer__column_heading {
+.footer__column-heading {
   color: #f2f2f2;
   padding-bottom: 20px;
   font-weight: bold;
@@ -347,4 +350,8 @@ ul {
 .footer__column_link_item {
   text-decoration: none;
   color:#f2f2f2;
+}
+
+.footer__column_links {
+  padding-inline-start: 0;
 }
