Исправлен файл стилей

--- a/styles/style.css
+++ b/styles/style.css
@@ -308,7 +308,7 @@ ul {
   width: 90%;
   padding-top: 60px;
   padding-bottom: 40px;
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 .footer__column_content_copyright {
