--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,3 @@
-
-
-ul { 
-  padding-inline-start: 0;
- }
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -65,6 +59,7 @@ ul {
   z-index: 2;
   padding-left: 64px;
   font-weight: bold;
+  margin: 0;
 }
 
 .header__link {
@@ -80,6 +75,7 @@ ul {
   z-index: 2;
   font-size: 18px;
   line-height: 25px;
+  margin: 0;
 }
 
 .logo {
@@ -135,6 +131,7 @@ ul {
   font-size: 18px;
   line-height: 1.2;
   font-weight: normal;
+  margin: 0;
 }
 
 .two-columns__main-text {
@@ -146,6 +143,7 @@ ul {
   margin-bottom: 30px;
   font-size: 24px;
   line-height: 34px;
+  margin: 0;
 }
 .two-columns__paragraph:last-of-type {
   margin-bottom: 0;
@@ -341,17 +339,21 @@ ul {
   line-height: 30px;
 }
 
-.footer__column_link {
+.footer__column-link {
   list-style-type: none;
   line-height: 30px;
   font-size: 18px;
 }
 
-.footer__column_link_item {
+.footer__column-link-item {
   text-decoration: none;
   color:#f2f2f2;
 }
 
-.footer__column_links {
+.footer__column-links {
   padding-inline-start: 0;
+}
+
+.footer__column-heading {
+  margin: 0;
 }
