--- a/styles/style.css
+++ b/styles/style.css
@@ -140,10 +140,9 @@
 }
 
 .two-columns__paragraph {
-  margin-bottom: 30px;
   font-size: 24px;
   line-height: 34px;
-  margin: 0;
+  margin: 0 0 30px;
 }
 .two-columns__paragraph:last-of-type {
   margin-bottom: 0;
