--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,5 +1,5 @@
 .khan__book-pic {
-    background-image: url('../../../images/khan-book.jpg');
+    background-image: url('/images/khan-book.jpg');
     width: 620px;
     height: 608px;
     background-size: cover;
