--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -6,6 +6,7 @@
     color: #2f80ed;
     text-decoration: none;
     transition: opacity .2s linear;
+    align-self: start;
   }
 
   .khan__buy-link:hover {
