--- a/blocks/resources/__logo-link/resources__logo-link.css
+++ b/blocks/resources/__logo-link/resources__logo-link.css
@@ -1,9 +1,8 @@
-.footer__column-link-item {
+.resources__logo-link {
     text-decoration: none;
-    color:#f2f2f2;  
     transition: opacity .2s linear;
 }
 
-.footer__column-link-item:hover {
+.resources__logo-link:hover {
   opacity: 0.5;
 }
