обновлены стили с картинками

--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -1,5 +1,5 @@
 .header__main-illustration {
-    background-image: url('/images/header-image.png');
+    background-image: url('../../../images/header-image.png');
     position: absolute;
     background-size: cover;
     bottom: 0;
