--- a/blocks/feynman/__img/feynman__img.css
+++ b/blocks/feynman/__img/feynman__img.css
@@ -1,5 +1,5 @@
 .feynman__img {
-    background-image: url('/images/feynman.png');
+    background-image: url('../../../images/feynman.png');
     background-repeat: no-repeat;
     background-size: cover;
     width: 867px;
